  double-bracketed variables are escaped, so you must use
  triple-brackets for variables that include raw HTML.  Please see the
  updated =seam-export-default-template-string= for reference.

- Your =seam-title-formatter= function should now take three arguments
  instead of two: the third arg (=draft-p=) will be non-nil if the
  note is a draft.

**** Renamed functions

- =seam-make-note= is now =seam-create-note=.

- =seam-replace-string-in-notes= is now
  =seam-replace-string-in-all-notes=.

- =seam-visited-files= is now =seam-visited-notes=.

*** New features

- Notes can now be set as drafts for finer-grained control over
  exporting.  If =seam-create-as-draft= is non-nil, new notes will be
  created as drafts.  See =seam-note-types= for info on overriding
  this per type.  A note's draft status can be toggled with the new
  command =seam-toggle-draft=.  A new =seam-export-alist= option,
  =:include-drafts=, controls whether drafts are included in a given
  export profile.

- Custom template variables can now be defined, and built-in ones
  overridden.  This is done globally with
  =seam-export-template-values=, or per profile with
  =:template-values=.

- An option has been added to export internal links with a custom CSS
  class.  The default is set by =seam-export-internal-link-class=, and
  can overridden per profile using =:internal-link-class=.

- Custom slugs can now be set by adding the =SEAM_SLUG= property to a
  note's title headline.

*** Improvements

- Notes are no longer re-exported unnecessarily whenever a linked note
  is changed.

- In HTML templates, ={{title}}= now strips out formatting, so that it
  is more suitable for use in =<title>= tags.  To get a raw
  HTML-formatted title for =<h1>= tags and the like, you should use
  the new ={{{raw-title}}}=.  As mentioned above, triple brackets are
  the Mustache syntax for interpolating raw HTML.

- When invoking =seam-delete-note=, the note's title is now mentioned.